--- a/index.html
+++ b/index.html
@@ -90,27 +90,92 @@
         <div class="hero__wrapper">
           <div class="container">
             <section class="hero">
-                   <h1 class="title js_main-title"></h1>
-              <p class="text js_sub-title"></p>
+              <div class="hero-block">
+                <img src="./img/icons/hero-icon.svg" alt="" class="hero-icon" />
+                <div>
+                  <h1 class="title js_main-title"></h1>
+                  <p class="text js_sub-title"></p>
+                </div>
+              </div>
+              <div class="policy-block">
+                <img src="./img/policy-img-3.jpeg" alt="" class="policy-img" />
+                <img src="./img/policy-img-1.jpeg" alt="" class="policy-img" />
+
+                <div class="policy-box policy-box-mb">
+                  <h3 class="policy-item-title">Privacy notice</h3>
+                  <p class="text">
+                    We are committed to providing an exciting and safe online shopping experience and elevated level of
+                    personal service synonymous with the Company.
+                  </p>
+                  <a href="./privacy.html" class="btn">read more</a>
+                </div>
+                <div class="policy-box">
+                  <h3 class="policy-item-title">Return policy</h3>
+                  <p class="text">
+                    The items are eligible for free replacement, within 30 days of delivery, in an unlikely event of
+                    damaged, defective or different item delivered to you.
+                  </p>
+                  <a href="./return.html" class="btn">read more</a>
+                </div>
+              </div>
+              <div class="contacts-block">
+                <div class="contacts-box contacts-box-mb">
+                  <h2 class="sub-title">Our Contacts</h2>
+                  <p class="text text--mb">
+                    If you require help, please do not hesitate and feel free to reach us at email. We would be more
+                    than happy to answer your questions.
+                  </p>
+                  <a href="./contacts.html" class="btn">contacts us</a>
+                </div>
+
+                <img src="./img/policy-img-2.jpeg" alt="" class="contacts-img" />
+                <div class="contacts-box">
+                  <img src="./img/icons/contacts-icon.svg" alt="" class="contacts-icon" />
+                  <ul class="contacts-list">
+                    <li class="contacts-item">
+                      <span class="contacts-span">Address:</span>
+                      <span class="text js_website-address"></span>
+                    </li>
+                    <li class="contacts-item contacts-item-link">
+                      <span class="contacts-span">Email:</span>
+                      <a href="" class="text js_website-email"></a>
+                    </li>
+                    <li class="contacts-item contacts-item-link">
+                      <span class="contacts-span">Phone:</span>
+                      <a href="" class="text js_website-phone"></a>
+                    </li>
+                  </ul>
+                </div>
+                <img src="./img/policy-img-4.jpeg" alt="" class="contacts-img" />
+              </div>
+              <div class="question-block">
+                <img src="./img/icons/question-icon.svg" alt="" class="question-icon" />
+                <h2 class="sub-title">FAQ</h2>
+                <ul class="question-list">
+                  <li class="question-item">
+                    <h3 class="question-sub-title">How can I track my order?</h3>
+                    <p class="text">A tracking number will be provided to you in your Shipping Confirmation email.</p>
+                  </li>
+                  <li class="question-item">
+                    <h3 class="question-sub-title">How can I change my Shipping Address?</h3>
+                    <p class="text">
+                      Changing of address is only allowed on or before 11:00pm (PDT, -7 GMT) on the same day of placing
+                      an order. You may contact us via
+                      <a href="" class="link js_website-email"></a>
+                      to request for such changes.
+                    </p>
+                  </li>
+                  <li class="question-item">
+                    <h3 class="question-sub-title">How is my order shipped?</h3>
+                    <p class="text">
+                      The standard ground mail service is shipped via United States Postal Service First Class Mail.
+                      Packages will arrive within 3-5 business days. Please be advised that shipments are not sent out
+                      on Saturdays, Sundays, or any Holidays. We do not guarantee arrival dates or times.
+                    </p>
+                  </li>
+                </ul>
+              </div>
             </section>
-          </div>
-        </div>
-
-        <div class="policy__wrapper">
-          <div class="container">
-            <section class="policy"></section>
-          </div>
-        </div>
-
-        <div class="contacts__wrapper">
-          <div class="container">
-            <section class="contacts"></section>
-          </div>
-        </div>
-
-        <div class="question__wrapper">
-          <div class="container">
-            <section class="question"></section>
           </div>
         </div>
 
@@ -128,12 +193,6 @@
                 <ul class="js_products__list products__list"></ul>
               </div>
             </section>
-          </div>
-        </div>
-
-        <div class="phrase__wrapper">
-          <div class="container">
-            <section class="phrase"></section>
           </div>
         </div>
       </main>
