Last Eduardo changes 29.02.24

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                   </p>
                   <a href="./privacy.html" class="btn">read more</a>
                 </div>
-                <div class="policy-box">
+                <!-- <div class="policy-box">
                   <h3 class="policy-item-title">Return policy</h3>
                   <p class="text">
                     The items are eligible for free replacement, within 30 days of delivery, in an unlikely event of
                     damaged, defective or different item delivered to you.
                   </p>
                   <a href="./return.html" class="btn">read more</a>
-                </div>
+                </div> -->
               </div>
               <div class="contacts-block">
                 <div class="contacts-box contacts-box-mb">
